--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,19 @@
     "plugins": [
         "react"
     ],
-    "rules": {
-    }
+    "rules": {},
+    "object-curly-newline": [
+        "error",
+        {
+            "ObjectExpression": "always",
+            "ObjectPattern": {
+                "multiline": true
+            },
+            "ImportDeclaration": "never",
+            "ExportDeclaration": {
+                "multiline": true,
+                "minProperties": 3
+            }
+        }
+    ]
 }
