--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,19 +20,5 @@
     "plugins": [
         "react"
     ],
-    "rules": {},
-    "object-curly-newline": [
-        "error",
-        {
-            "ObjectExpression": "always",
-            "ObjectPattern": {
-                "multiline": true
-            },
-            "ImportDeclaration": "never",
-            "ExportDeclaration": {
-                "multiline": true,
-                "minProperties": 3
-            }
-        }
-    ]
+    "rules": {}
 }
